--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "Sergey Mudretskiy",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "celebrate": "^15.0.3",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
