--- a/.github/workflows/tests-14-sprint.yml
+++ b/.github/workflows/tests-14-sprint.yml
@@ -7,16 +7,17 @@ on:
     tags:
       - '**'
 
+
 jobs:
   test_config:
     runs-on: ubuntu-latest
     steps:
     - name: Set up GitHub Actions
       uses: actions/checkout@v2
-    - name: Use Node.js 14.x
+    - name: Use Node.js 16.x
       uses: actions/setup-node@v1
       with:
-        node-version: 14.x
+        node-version: 16.x
     - name: Get testing lib
       run: set -eu && git clone --depth 1 https://github.com/Yandex-Practicum/web-autotest-public.git
     - name: Copy Makefile
@@ -31,10 +32,10 @@ jobs:
     steps:
     - name: Set up GitHub Actions
       uses: actions/checkout@v2
-    - name: Use Node.js 14.x
+    - name: Use Node.js 16.x
       uses: actions/setup-node@v1
       with:
-        node-version: 14.x
+        node-version: 16.x
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.6.0
       with:
@@ -43,6 +44,8 @@ jobs:
       run: set -eu && git clone --depth 1 https://github.com/Yandex-Practicum/web-autotest-public.git
     - name: Copy Makefile
       run: cp ./web-autotest-public/Makefile ./Makefile
+      - name: Run prepare-test-endpoints
+      run: make proj14-prepare-test-endpoints
     - name: Installing Dependencies
       run: npm i
     - name: Installing wait-port
