--- a/.github/workflows/tests-14-sprint.yml
+++ b/.github/workflows/tests-14-sprint.yml
@@ -7,17 +7,16 @@ on:
     tags:
       - '**'
 
-
 jobs:
   test_config:
     runs-on: ubuntu-latest
     steps:
     - name: Set up GitHub Actions
       uses: actions/checkout@v2
-    - name: Use Node.js 16.x
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v1
       with:
-        node-version: 16.x
+        node-version: 18.x
     - name: Get testing lib
       run: set -eu && git clone --depth 1 https://github.com/Yandex-Practicum/web-autotest-public.git
     - name: Copy Makefile
@@ -32,10 +31,10 @@ jobs:
     steps:
     - name: Set up GitHub Actions
       uses: actions/checkout@v2
-    - name: Use Node.js 16.x
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v1
       with:
-        node-version: 16.x
+        node-version: 18.x
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.6.0
       with:
@@ -44,12 +43,10 @@ jobs:
       run: set -eu && git clone --depth 1 https://github.com/Yandex-Practicum/web-autotest-public.git
     - name: Copy Makefile
       run: cp ./web-autotest-public/Makefile ./Makefile
-      - name: Run prepare-test-endpoints
-      run: make proj14-prepare-test-endpoints
     - name: Installing Dependencies
       run: npm i
     - name: Installing wait-port
-      run: npm install -g wait-port
+      run: npm install -g wait-port@1.0.4
     - name: Run server
       run: npm run start & wait-port -t 30000 localhost:3000
     - name: Run test endpoints
